--- a/retreat_schedule/appinfo.json
+++ b/retreat_schedule/appinfo.json
@@ -3,8 +3,8 @@
     "capabilities": [
         ""
     ],
-    "companyName": "infobalestra@gmail.com",
-    "longName": "Retreat Schedule",
+    "companyName": "patrick@straphq.com",
+    "longName": "Revolution UC Schedule",
     "projectType": "native",
     "resources": {
         "media": [
@@ -13,8 +13,8 @@
     },
     "shortName": "Retreat Schedule",
     "uuid": "4ab3a5b9-08c9-4bba-8b8b-9271c3fb6259",
-    "versionCode": 1,
-    "versionLabel": "1.1",
+    "versionCode": 2,
+    "versionLabel": "2",
     "watchapp": {
         "watchface": false
     }
